chore: update dependencies
Update selected dependencies.

Signed-off-by: Mateusz Urbanek <mateusz.urbanek@siderolabs.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-10-16T09:22:23Z by kres 7a9d88c.
+# Generated on 2025-11-05T12:54:07Z by kres cd5a938.
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -5050,32 +5050,32 @@ jobs:
         uses: sigstore/cosign-installer@v3
       - name: Sign artifacts
         run: |
-          cosign sign-blob --output-signature _out/cloud-images.json.sig --yes _out/cloud-images.json
-          cosign sign-blob --output-signature _out/initramfs-amd64.xz.sig --yes _out/initramfs-amd64.xz
-          cosign sign-blob --output-signature _out/initramfs-arm64.xz.sig --yes _out/initramfs-arm64.xz
-          cosign sign-blob --output-signature _out/metal-amd64.iso.sig --yes _out/metal-amd64.iso
-          cosign sign-blob --output-signature _out/metal-arm64.iso.sig --yes _out/metal-arm64.iso
-          cosign sign-blob --output-signature _out/metal-amd64-uki.efi.sig --yes _out/metal-amd64-uki.efi
-          cosign sign-blob --output-signature _out/metal-arm64-uki.efi.sig --yes _out/metal-arm64-uki.efi
-          cosign sign-blob --output-signature _out/metal-amd64.raw.zst.sig --yes _out/metal-amd64.raw.zst
-          cosign sign-blob --output-signature _out/metal-arm64.raw.zst.sig --yes _out/metal-arm64.raw.zst
-          cosign sign-blob --output-signature _out/talos-arm64.spdx.json.sig --yes _out/talos-arm64.spdx.json
-          cosign sign-blob --output-signature _out/talos-amd64.spdx.json.sig --yes _out/talos-amd64.spdx.json
-          cosign sign-blob --output-signature _out/talos-container-arm64.spdx.json.sig --yes _out/talos-container-arm64.spdx.json
-          cosign sign-blob --output-signature _out/talos-container-amd64.spdx.json.sig --yes _out/talos-container-amd64.spdx.json
-          cosign sign-blob --output-signature _out/talosctl-cni-bundle-amd64.tar.gz.sig --yes _out/talosctl-cni-bundle-amd64.tar.gz
-          cosign sign-blob --output-signature _out/talosctl-cni-bundle-arm64.tar.gz.sig --yes _out/talosctl-cni-bundle-arm64.tar.gz
-          cosign sign-blob --output-signature _out/talosctl-darwin-amd64.sig --yes _out/talosctl-darwin-amd64
-          cosign sign-blob --output-signature _out/talosctl-darwin-arm64.sig --yes _out/talosctl-darwin-arm64
-          cosign sign-blob --output-signature _out/talosctl-freebsd-amd64.sig --yes _out/talosctl-freebsd-amd64
-          cosign sign-blob --output-signature _out/talosctl-freebsd-arm64.sig --yes _out/talosctl-freebsd-arm64
-          cosign sign-blob --output-signature _out/talosctl-linux-amd64.sig --yes _out/talosctl-linux-amd64
-          cosign sign-blob --output-signature _out/talosctl-linux-arm64.sig --yes _out/talosctl-linux-arm64
-          cosign sign-blob --output-signature _out/talosctl-linux-armv7.sig --yes _out/talosctl-linux-armv7
-          cosign sign-blob --output-signature _out/talosctl-windows-amd64.exe.sig --yes _out/talosctl-windows-amd64.exe
-          cosign sign-blob --output-signature _out/talosctl-windows-arm64.exe.sig --yes _out/talosctl-windows-arm64.exe
-          cosign sign-blob --output-signature _out/vmlinuz-amd64.sig --yes _out/vmlinuz-amd64
-          cosign sign-blob --output-signature _out/vmlinuz-arm64.sig --yes _out/vmlinuz-arm64
+          cosign sign-blob --bundle _out/cloud-images.json.bundle --yes _out/cloud-images.json
+          cosign sign-blob --bundle _out/initramfs-amd64.xz.bundle --yes _out/initramfs-amd64.xz
+          cosign sign-blob --bundle _out/initramfs-arm64.xz.bundle --yes _out/initramfs-arm64.xz
+          cosign sign-blob --bundle _out/metal-amd64.iso.bundle --yes _out/metal-amd64.iso
+          cosign sign-blob --bundle _out/metal-arm64.iso.bundle --yes _out/metal-arm64.iso
+          cosign sign-blob --bundle _out/metal-amd64-uki.efi.bundle --yes _out/metal-amd64-uki.efi
+          cosign sign-blob --bundle _out/metal-arm64-uki.efi.bundle --yes _out/metal-arm64-uki.efi
+          cosign sign-blob --bundle _out/metal-amd64.raw.zst.bundle --yes _out/metal-amd64.raw.zst
+          cosign sign-blob --bundle _out/metal-arm64.raw.zst.bundle --yes _out/metal-arm64.raw.zst
+          cosign sign-blob --bundle _out/talos-arm64.spdx.json.bundle --yes _out/talos-arm64.spdx.json
+          cosign sign-blob --bundle _out/talos-amd64.spdx.json.bundle --yes _out/talos-amd64.spdx.json
+          cosign sign-blob --bundle _out/talos-container-arm64.spdx.json.bundle --yes _out/talos-container-arm64.spdx.json
+          cosign sign-blob --bundle _out/talos-container-amd64.spdx.json.bundle --yes _out/talos-container-amd64.spdx.json
+          cosign sign-blob --bundle _out/talosctl-cni-bundle-amd64.tar.gz.bundle --yes _out/talosctl-cni-bundle-amd64.tar.gz
+          cosign sign-blob --bundle _out/talosctl-cni-bundle-arm64.tar.gz.bundle --yes _out/talosctl-cni-bundle-arm64.tar.gz
+          cosign sign-blob --bundle _out/talosctl-darwin-amd64.bundle --yes _out/talosctl-darwin-amd64
+          cosign sign-blob --bundle _out/talosctl-darwin-arm64.bundle --yes _out/talosctl-darwin-arm64
+          cosign sign-blob --bundle _out/talosctl-freebsd-amd64.bundle --yes _out/talosctl-freebsd-amd64
+          cosign sign-blob --bundle _out/talosctl-freebsd-arm64.bundle --yes _out/talosctl-freebsd-arm64
+          cosign sign-blob --bundle _out/talosctl-linux-amd64.bundle --yes _out/talosctl-linux-amd64
+          cosign sign-blob --bundle _out/talosctl-linux-arm64.bundle --yes _out/talosctl-linux-arm64
+          cosign sign-blob --bundle _out/talosctl-linux-armv7.bundle --yes _out/talosctl-linux-armv7
+          cosign sign-blob --bundle _out/talosctl-windows-amd64.exe.bundle --yes _out/talosctl-windows-amd64.exe
+          cosign sign-blob --bundle _out/talosctl-windows-arm64.exe.bundle --yes _out/talosctl-windows-arm64.exe
+          cosign sign-blob --bundle _out/vmlinuz-amd64.bundle --yes _out/vmlinuz-amd64
+          cosign sign-blob --bundle _out/vmlinuz-arm64.bundle --yes _out/vmlinuz-arm64
       - name: Generate Checksums
         run: |
           cd _out
@@ -5084,10 +5084,10 @@ jobs:
       - name: Sign checksums
         run: |
           cd _out
-          cosign sign-blob --output-signature sha256sum.txt.sig --yes sha256sum.txt
-          cosign sign-blob --output-signature sha512sum.txt.sig --yes sha512sum.txt
+          cosign sign-blob --bundle sha256sum.txt.bundle --yes sha256sum.txt
+          cosign sign-blob --bundle sha512sum.txt.bundle --yes sha512sum.txt
       - name: release
-        uses: crazy-max/ghaction-github-release@v2
+        uses: softprops/action-gh-release@v2
         with:
           body_path: _out/RELEASE_NOTES.md
           draft: "true"
@@ -5119,4 +5119,4 @@ jobs:
             _out/vmlinuz-amd64
             _out/vmlinuz-arm64
             _out/sha*.txt
-            _out/*.sig
+            _out/*.bundle
