--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,7 +18,7 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.17.5
+Linux: 6.17.7
 Kubernetes: 1.35.0-alpha.2
 CNI Plugins: 1.8.0
 cryptsetup: 2.8.1
@@ -28,7 +28,8 @@ runc: 1.3.2
 CoreDNS: 1.13.0
 etcd: 3.6.5
 Flannel: 0.27.4
-Flannel CNI plugin: v1.8.0-flannel1
+Flannel CNI plugin: v1.8.0-flannel2
+runc: 1.3.3
 
 Talos is built with Go 1.25.3.
 """
