--- a/hack/release.toml
+++ b/hack/release.toml
@@ -30,8 +30,9 @@ etcd: 3.6.5
 Flannel: 0.27.4
 Flannel CNI plugin: v1.8.0-flannel2
 runc: 1.3.3
+containerd: 2.1.5
 
-Talos is built with Go 1.25.3.
+Talos is built with Go 1.25.4.
 """
 
     [notes.luks2]
