--- a/hack/test/patches/image-cache.yaml
+++ b/hack/test/patches/image-cache.yaml
@@ -2,20 +2,27 @@ machine:
   features:
     imageCache:
       localEnabled: true
-  registries:
-    mirrors:
-      "*":
-        skipFallback: true
-        endpoints:
-        - http://172.20.0.251:65000
-      k8s.gcr.io:
-        skipFallback: true
-        endpoints:
-        - http://172.20.0.251:65000
-      registry.k8s.io:
-        skipFallback: true
-        endpoints:
-        - http://172.20.0.251:65000
+---
+apiVersion: v1alpha1
+kind: RegistryMirrorConfig
+name: '*'
+skipFallback: true
+endpoints:
+  - url: http://172.20.0.251:65000
+---
+apiVersion: v1alpha1
+kind: RegistryMirrorConfig
+name: k8s.gcr.io
+skipFallback: true
+endpoints:
+  - url: http://172.20.0.251:65000
+---
+apiVersion: v1alpha1
+kind: RegistryMirrorConfig
+name: registry.k8s.io
+skipFallback: true
+endpoints:
+  - url: http://172.20.0.251:65000
 ---
 apiVersion: v1alpha1
 kind: VolumeConfig
