--- a/hack/release.toml
+++ b/hack/release.toml
@@ -181,6 +181,14 @@ When `volumeType = "disk"`:
 - Size specific settings are not allowed in the provisioning block (`minSize`, `maxSize`, `grow`).
 """
 
+    [notes.uefi-boot]
+        title = "UEFI Boot"
+        description = """\
+When using UEFI boot with systemd-boot as bootloader (on new installs of Talos from 1.10+ onwards), Talos will now not touch the UEFI boot order.
+Talos 1.11 made a fix to create UEFI boot entry and set the boot order as first entry, but this behavior caused issues on some systems.
+To avoid further issues, Talos will now only create the UEFI boot entry if it does not exist, but will not modify the boot order.
+"""
+
 [make_deps]
 
     [make_deps.tools]
