--- a/.github/workflows/integration-aws-nvidia-nonfree-production-cron.yaml
+++ b/.github/workflows/integration-aws-nvidia-nonfree-production-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-10-07T13:32:17Z by kres 97ccf82.
+# Generated on 2025-11-14T11:20:11Z by kres e1d6dac.
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -103,7 +103,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.12
           repository: siderolabs/extensions
       - name: set variables
         run: |
