--- a/.github/workflows/integration-extensions-cron.yaml
+++ b/.github/workflows/integration-extensions-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-09-19T11:03:20Z by kres 065ec4c.
+# Generated on 2025-11-14T11:20:11Z by kres e1d6dac.
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -85,7 +85,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.12
           repository: siderolabs/extensions
       - name: unshallow-extensions
         run: |
