--- a/.kres.yaml
+++ b/.kres.yaml
@@ -1831,7 +1831,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.12
             path: _out/extensions
         - name: unshallow-extensions
           nonMakeStep: true
@@ -2178,7 +2178,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.12
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
@@ -2711,7 +2711,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.12
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
@@ -2809,7 +2809,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.12
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
@@ -2907,7 +2907,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.12
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
@@ -3003,7 +3003,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.12
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
