--- a/.kres.yaml
+++ b/.kres.yaml
@@ -206,6 +206,7 @@ spec:
               - talosctl-linux-amd64
               - talosctl-linux-arm64
               - talosctl-linux-armv7
+              - talosctl-linux-riscv64
               - talosctl-windows-amd64.exe
               - talosctl-windows-arm64.exe
               - vmlinuz-amd64
