--- a/.kres.yaml
+++ b/.kres.yaml
@@ -94,9 +94,7 @@ spec:
     - name: default
       buildxOptions:
         enabled: true
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       conditions:
         - on-pull-request
       steps:
@@ -143,9 +141,7 @@ spec:
     - name: push
       buildxOptions:
         enabled: true
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       conditions:
         - except-pull-request
         - not-on-tag
@@ -165,14 +161,12 @@ spec:
           environment:
             PLATFORM: linux/amd64,linux/arm64
           conditions:
-            - not-on-tag
+            - only-on-main-branch
     - name: tag
       sops: true
       buildxOptions:
         enabled: true
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       conditions:
         - only-on-tag
       steps:
@@ -224,9 +218,7 @@ spec:
     - name: e2e-iso
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       steps:
         - name: download-artifacts
           artifactStep:
@@ -251,9 +243,7 @@ spec:
     - name: e2e-qemu-short
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       steps:
         - name: download-artifacts
           artifactStep:
@@ -280,9 +270,7 @@ spec:
     - name: e2e-docker-short
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       steps:
         - name: download-artifacts
           artifactStep:
@@ -310,9 +298,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -365,9 +351,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -436,9 +420,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 4 * * *'
       triggerLabels:
@@ -490,9 +472,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 4 * * *'
       triggerLabels:
@@ -559,9 +539,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -632,9 +610,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -707,9 +683,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 4 * * *'
       triggerLabels:
@@ -766,9 +740,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 4 * * *'
       triggerLabels:
@@ -818,9 +790,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 4 * * *'
       triggerLabels:
@@ -870,9 +840,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -956,9 +924,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1047,9 +1013,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1154,9 +1118,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1277,9 +1239,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1347,9 +1307,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1438,9 +1396,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1527,9 +1483,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -1641,9 +1595,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 6 * * *'
       triggerLabels:
@@ -1725,9 +1677,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -1806,9 +1756,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -1862,9 +1810,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -1928,9 +1874,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -1995,9 +1939,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -2091,9 +2033,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 3 * * *'
       triggerLabels:
@@ -2159,9 +2099,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # this is pretty fast, so we can use generic
+      runnerGroup: generic # this is pretty fast, so we can use generic
       crons:
         - '30 2 * * *'
       triggerLabels:
@@ -2198,9 +2136,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 2 * * *'
       triggerLabels:
@@ -2226,9 +2162,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # this is not compute intensive, so we can use generic
+      runnerGroup: generic # this is not compute intensive, so we can use generic
       triggerLabels:
         - integration/cloud-images
       steps:
@@ -2260,9 +2194,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 2 * * *'
       triggerLabels:
@@ -2327,9 +2259,7 @@ spec:
         enabled: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - talos
+      runnerGroup: large
       crons:
         - '30 6 * * *'
       triggerLabels:
@@ -2458,9 +2388,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # we can use generic here since the tests run against a remote talos cluster
+      runnerGroup: generic # we can use generic here since the tests run against a remote talos cluster
       crons:
         - '30 7 * * *'
       triggerLabels:
@@ -2532,9 +2460,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # we can use generic here since the tests run against a remote talos cluster
+      runnerGroup: generic # we can use generic here since the tests run against a remote talos cluster
       crons:
         - '30 5 * * *'
       triggerLabels:
@@ -2629,9 +2555,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # we can use generic here since the tests run against a remote talos cluster
+      runnerGroup: generic # we can use generic here since the tests run against a remote talos cluster
       crons:
         - '30 7 * * *'
       triggerLabels:
@@ -2726,9 +2650,7 @@ spec:
       sops: true
       depends:
         - default
-      runners:
-        - self-hosted
-        - generic # we can use generic here since the tests run against a remote talos cluster
+      runnerGroup: generic # we can use generic here since the tests run against a remote talos cluster
       crons:
         - '30 7 * * *'
       triggerLabels:
