feat: present kernel log as `talosctl logs kernel`
Extracted from #12115

The idea is that kernel log can be delivered/persisted along with any
other service logs.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit e715f387137fa566a4824c051b624e013a93c49f)

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -205,6 +205,12 @@ This is in line with a set of best practices documented in CIS 1.12 benchmark.
 You can still expand the list of supported cipher suites via the `cluster.apiServer.extraArgs."tls-cipher-suites"` machine configuration field if needed.
 """
 
+    [notes.kernel-log]
+        title = "Kernel Log"
+        description = """\
+The kernel log (dmesg) is now also available as the service log named `kernel` (`talosctl logs kernel`).
+"""
+
 [make_deps]
 
     [make_deps.tools]
