--- a/hack/release.toml
+++ b/hack/release.toml
@@ -24,13 +24,15 @@ CNI Plugins: 1.8.0
 cryptsetup: 2.8.1
 LVM2: 2_03_37
 systemd-udevd: 257.8
-runc: 1.3.2
+runc: 1.3.4
 CoreDNS: 1.13.1
 etcd: 3.6.6
 Flannel: 0.27.4
 Flannel CNI plugin: v1.8.0-flannel2
-runc: 1.3.3
 containerd: 2.1.5
+
+> For Talos 1.13 only:
+> containerd: 2.2.0
 
 Talos is built with Go 1.25.4.
 """
