--- a/hack/release.toml
+++ b/hack/release.toml
@@ -19,7 +19,7 @@ preface = """
         title = "Component Updates"
         description = """\
 Linux: 6.18.0
-Kubernetes: 1.35.0-beta.0
+Kubernetes: 1.35.0-rc.0
 CNI Plugins: 1.8.0
 cryptsetup: 2.8.1
 LVM2: 2_03_37
