--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,8 +18,8 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.17.9
-Kubernetes: 1.35.0-beta.0
+Linux: 6.18.0
+Kubernetes: 1.35.0-rc.0
 CNI Plugins: 1.8.0
 cryptsetup: 2.8.1
 LVM2: 2_03_37
