test: bird2 extension
Add a dummy config to make extension start successfully.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit cf087c1e01bc1226049a57186f48b2e6b5739c5c)

--- a/hack/test/patches/extensions.yaml
+++ b/hack/test/patches/extensions.yaml
@@ -58,3 +58,14 @@ configFiles:
       unconfigure lldp capabilities-advertisements
       configure system description "Talos Node"
     mountPath: /usr/local/etc/lldpd/lldpd.conf
+---
+apiVersion: v1alpha1
+kind: ExtensionServiceConfig
+name: bird2
+configFiles:
+  - mountPath: /usr/local/etc/bird.conf
+    content: |
+      # This is just a minimal NOOP config!
+      log stderr all;
+      router id 6.6.6.6;
+      protocol device {}
